--- a/index.html
+++ b/index.html
@@ -6,12 +6,40 @@
 
   <title>Git</title>
   <meta name="Krzysztof" content="Git">
-
-  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,900;1,300&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-
+    <div class="text">
+        <h2>Pan Tadeusz - Inwokacja <br>
+        <span>Autor: Adam Mickiewicz</span>
+        </h2>
+        <p>
+            Litwo! Ojczyzno moja! Ty jesteś jak zdrowie,<br>
+            Ile cię trzeba cenić, ten tylko się dowie,<br>
+            Kto cię stracił. Dziś piękność twą w całej ozdobie<br>
+            Widzę i opisuję, bo tęsknię po tobie<br>
+            Panno święta, co Jasnej bronisz Częstochowy<br>
+            I w Ostrej świecisz Bramie! Ty, co gród zamkowy<br>
+            Nowogródzki ochraniasz z jego wiernym ludem!<br>
+            Jak mnie dziecko do zdrowia powróciłaś cudem,<br>
+            (Gdy od płaczącej matki pod Twoją opiekę<br>
+            Ofiarowany, martwą podniosłem powiekę<br>
+            I zaraz mogłem pieszo do Twych świątyń progu<br>
+            Iść za wrócone życie podziękować Bogu),<br>
+            Tak nas powrócisz cudem na Ojczyzny łono.<br>
+            Tymczasem przenoś moją duszę utęsknioną<br>
+            Do tych pagórków leśnych, do tych łąk zielonych,<br>
+            Szeroko nad błękitnym Niemnem rozciągnionych;<br>
+            Do tych pól malowanych zbożem rozmaitem,<br>
+            Wyzłacanych pszenicą, posrebrzanych żytem;<br>
+            Gdzie bursztynowy świerzop, gryka jak śnieg biała,<br>
+            Gdzie panieńskim rumieńcem dzięcielina pała,<br>
+            A wszystko przepasane jakby wstęgą, miedzą<br>
+            Zieloną, na niej z rzadka ciche grusze siedzą.<br>
+        </p>
+    </div>
 </body>
 </html>
